--- a/paper/supplemental_information.Rmd
+++ b/paper/supplemental_information.Rmd
@@ -9,7 +9,6 @@ header-includes:
   - \usepackage{booktabs}
   - \renewcommand{\thefigure}{S\arabic{figure}}
   - \renewcommand{\thetable}{S\arabic{table}}
-
 ---
 
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
@@ -25,8 +24,7 @@ suppressMessages(source(paper))
 
 # Dataset Description
 
-Figure \ref{fig:dataset} gives the age distribution of unique participants for each separate dataset at different ages. 
-Note that for some datasets, there are multiple administrations (i.e., experimental test sessions) for each participant.
+Figure \ref{fig:dataset} gives the age distribution of unique participants for each separate dataset at different ages. Note that for some datasets, there are multiple administrations (i.e., experimental test sessions) for each participant.
 
 ```{r dataset, fig.cap="\\label{fig:dataset} Age distribution of unique participants for each dataset, using three-month bins.", fig.pos="h!"}
 
@@ -78,10 +76,53 @@ ggplot(filter(d_sub_long, admin_num > 1),
 
 # Reaction Time Computation
 
-Eye-tracking data are stored in Peekbank as a time series of fixations to specific areas of interest (in particular, the target and distractor on each trial). Other fixations can be to areas not in the target or distractor as well to off-screen areas. This time series has a uniform sample rate of 25ms/sample, based on resampling of the data in Peekbank to 40 Hz during preprocessing [@zettersten2023peekbank]. Reaction times are computed by filtering trials to only those on which the child is fixating the distractor at the point of disambiguation ($t=0$) and then finding those trials on which the first non-missing fixation is to the target (hence excluding trials without a shift and trials on which a shift is to an off-screen location). The reaction time is then the total time from $t=0$ to the first timestep during which the child fixates the target. Consistent with standard practice in the literature following Fernald et al. (2008), RTs that are shorter than 367 ms are excluded as they are too short to be considered a response to the stimulus. 
+Eye-tracking data are stored in Peekbank as a time series of fixations to specific areas of interest (in particular, the target and distractor on each trial). Other fixations can be to areas not in the target or distractor as well to off-screen areas. This time series has a uniform sample rate of 25ms/sample, based on resampling of the data in Peekbank to 40 Hz during preprocessing [@zettersten2023peekbank]. Reaction times are computed by filtering trials to only those on which the child is fixating the distractor at the point of disambiguation ($t=0$) and then finding those trials on which the first non-missing fixation is to the target (hence excluding trials without a shift and trials on which a shift is to an off-screen location). The reaction time is then the total time from $t=0$ to the first timestep during which the child fixates the target. Consistent with standard practice in the literature following Fernald et al. (2008), RTs that are shorter than 367 ms are excluded as they are too short to be considered a response to the stimulus.
 
+# Comparison of Reaction Times for Correct and Incorrect Trials: Re-analysis of Creel (2024)
 
+```{r}
+#load data using Creel (2024) analysis scripts
+# To run this script, you need to first pull in two datasets from the Creel (2024) OSF repository (https://osf.io/wszd5/):
+#allfamiliars.csv and allnovels.csv
+library(osfr)
+creel_proj <- osf_retrieve_node("wszd5")
+#donwload familiar trials
+#TO DO: separate this out so files are downloaded only once
+creel_proj %>%
+  osf_ls_files(pattern = "allfamiliars.csv") %>% # Replace "data.csv" with your file's name
+  osf_download(path = here("supplemental_data","creel_2024"),conflicts = "overwrite")
+creel_proj %>%
+  osf_ls_files(pattern = "allnovels.csv") %>% # Replace "data.csv" with your file's name
+  osf_download(path = here("supplemental_data","creel_2024"),conflicts = "overwrite")
 
+#run Creel prep script
+source(here("supplemental_data","creel_2024","Step2aCorrsNDataPrep.R"))
+# run Peekbank-style rt computation over Creel data
+source(here("supplemental_data","creel_2024","creel_peekbank_acc_rt_analysis.R"))
+
+ creel_plot <- ggplot(filter(subj_rt_acc,n_correct_trials>1&n_trials>1),aes(mean_rt,mean_rt_correct))+
+  geom_point(aes(size=n_correct_trials),alpha=0.3,fill="black",stroke=NA)+
+  geom_smooth(method="lm")+
+  xlab("Mean Participant Reaction Time (ms)\nAll Trials")+
+  ylab("Mean Participant Reaction Time (ms)\nTrials w/ Correct Pointing Response")+
+  theme_cowplot(font_size=20)+
+  #add correlation and p-value as text box
+  annotate("text",x=500,y=1500,label=paste0("r = ",round(cor(filter(subj_rt_acc,n_correct_trials>1&n_trials>1)$mean_rt,filter(subj_rt_acc,n_correct_trials>1&n_trials>1)$mean_rt_correct,use="pairwise.complete.obs"),2)),size=9)+
+  theme(legend.position=c(0.8,0.2))+
+  scale_size_continuous(name="# Trials",breaks=c(2,5,10,15,20))
+ggsave(here("supplemental_data","creel_2024","creel_rt_correlation_correcttrials_vs_alltrials.png"),width=9,height=6)
+
+creel_correlation <- cor.test(filter(subj_rt_acc,n_correct_trials>1&n_trials>1)$mean_rt,filter(subj_rt_acc,n_correct_trials>1&n_trials>1)$mean_rt_correct,use="pairwise.complete.obs")
+
+```
+
+The Peekbank dataset only includes measurements of infants' looking behavior, with no measure of a final target selection. This contrasts with work in the visual-world paradigm with older children and adults, in which participants make a final explicit choice about which image matches the target label (e.g. Colby & McMurray, 2023). Having this additional response allows a clearer separation of accuracy and reaction times, because researchers can compute reaction times specifically on those trials in which participants responded correctly. This strategy helps avoid a possible mixing of reaction times for incorrect and correct responses, which might be generated by different underlying cognitive processes. A possible concern with the Peekbank datasets --- and reaction times in infant looking-while-listening studies more generally --- is that it is difficult to separate reaction times for correct vs. incorrect responses in the absence of an independent final choice response.
+
+To address this concern, we investigated data from a recent large-scale word recognition study with toddlers in which eyetracking measures were collected together with a final pointing response (Creel, 2024). This dataset included 914 responses from children (2.5-6.5 years) completing a looking-while listening procedure in which they also were instructed to point to the target image. Using this dataset, we investigated the correlation between reaction times (following the same procedure as in our main analyses, i.e. focusing specifically on distractor-to-target shifts) computed over all trials and reaction times computed only for those trials in which children selected the correct referent. The results are visualized below. Reaction times (i.e., distractor to target shifts) for correct trials only were highly correlated with reaction times across all trials (`r apa_print(creel_correlation)$full_result`). This result suggests that having the ability to filter out incorrect trials has a minimal impact on reaction time computation, even in young children. While there is some uncertainty about how these results may generalize to infants in our younger age ranges (i.e., below 2.5 years of age), who struggle to provide reliable pointing responses, it seems reasonable to assume that our reaction time results would stay largely the same if it were possible to filter out trials on which infants make an incorrect mapping between the target label and the target image using an eyetracking-independent final choice response.
+
+```{r}
+creel_plot
+```
 
 # Separability of Variability from Other Measures
 
@@ -146,10 +187,6 @@ ggplot(rt_fits,
 
 ```
 
-
-
-
-
 ```{r}
 rt_hist_data <- d_sub |>
   mutate(
@@ -179,11 +216,7 @@ ggplot(rt_hist_data,
   theme_few()
 ```
 
-
-
-
 ## Accuracy
-
 
 ```{r}
 acc_hist_data <- d_sub |>
@@ -259,8 +292,6 @@ ggplot(acc_fits,
 
 ```
 
-
-
 # Test-Retest Reliability
 
 ```{r reliability}
@@ -305,13 +336,13 @@ global_reliabilities <- d_reliability |>
                             short_window_accuracy_2, use = "pairwise.complete.obs"))
 ```
 
-
-We examined test-retest reliability for our primary variables of interest by calculating Pearson correlations between pairs of administrations given no more than three months apart. Test-retest correlations were significant but relatively modest: $\rho_{long window acc} = `r round(global_reliabilities[2], 3)`$, $\rho_{short window acc} = `r round(global_reliabilities[3], 3)`$, $\rho_{rt} =  `r round(global_reliabilities[1],3)`$. These reliabilities were biased downwards by three factors, however. First, longitudinal assessments sometimes use variable items between testing sessions, leading to item-related variance in measurement. Second, even three months can lead to substantial change in some children's language abilities, thus correlations are attenuated by true change as well as measurement error. Third, longitudinal data in the dataset come primarily from the youngest children and hence are likely to show overall higher measurement error due to variability in children's behavior and an overall lower number of trials. 
+We examined test-retest reliability for our primary variables of interest by calculating Pearson correlations between pairs of administrations given no more than three months apart. Test-retest correlations were significant but relatively modest: $\rho_{long window acc} = `r round(global_reliabilities[2], 3)`$, $\rho_{short window acc} = `r round(global_reliabilities[3], 3)`$, $\rho_{rt} =  `r round(global_reliabilities[1],3)`$. These reliabilities were biased downwards by three factors, however. First, longitudinal assessments sometimes use variable items between testing sessions, leading to item-related variance in measurement. Second, even three months can lead to substantial change in some children's language abilities, thus correlations are attenuated by true change as well as measurement error. Third, longitudinal data in the dataset come primarily from the youngest children and hence are likely to show overall higher measurement error due to variability in children's behavior and an overall lower number of trials.
 
 # Correlations
 
 Table \ref{tab:corrs} shows pairwise correlations between the primary variables of interest in the dataset.
 
+```{=tex}
 \begin{table}[tbp]
 \begin{center}
 \begin{threeparttable}
@@ -333,8 +364,7 @@ comprehension vocabulary & 0.42 & 0.42 & -0.25 & -0.24 & 0.24 & 0.24 & 0.59 & 1.
 \end{center}
 \caption{Pairwise correlations between primary variables of interest. \label{tab:corrs}}
 \end{table}
-
-
+```
 ```{r corrs, results = "asis", include = FALSE}
 
 cor(select(d_sub, age, log_age, rt, log_rt, 
@@ -347,9 +377,9 @@ cor(select(d_sub, age, log_age, rt, log_rt,
 
 # Functional Form Model Comparison
 
-Table \ref{tab:accmods} shows model comparison measures between for different models of the functional form of the relationship between accuracy and age and Table \ref{tab:rtmods} shows the same for reaction time. Age gradients are estimated substantially better with long window accuracies. Note that there are a greater number of observations for short window accuracies due to less missing data. We speculate that, on average, more participants looked away from the screen towards the end of trials, leading to a greater number of exclusions of long window trials based on the 50% criterion. Note that the total percentage of trials excluded is still small for both measures: `r round(mean(is.na(d_trial$long_window_accuracy)), 3)*100`% for long window accuracy and `r round(mean(is.na(d_trial$short_window_accuracy)), 3)*100`% for short window accuracy. 
+Table \ref{tab:accmods} shows model comparison measures between for different models of the functional form of the relationship between accuracy and age and Table \ref{tab:rtmods} shows the same for reaction time. Age gradients are estimated substantially better with long window accuracies. Note that there are a greater number of observations for short window accuracies due to less missing data. We speculate that, on average, more participants looked away from the screen towards the end of trials, leading to a greater number of exclusions of long window trials based on the 50% criterion. Note that the total percentage of trials excluded is still small for both measures: `r round(mean(is.na(d_trial$long_window_accuracy)), 3)*100`% for long window accuracy and `r round(mean(is.na(d_trial$short_window_accuracy)), 3)*100`% for short window accuracy.
 
-
+```{=tex}
 \begin{table}[tbp]
 \begin{center}
 \begin{threeparttable}
@@ -367,7 +397,8 @@ n. obs & \multicolumn{1}{c}{sigma} & \multicolumn{1}{c}{logLik} & \multicolumn{1
 \end{center}
 \caption{Model comparison metrics for different functional forms of the relationship between accuracy and age. \label{tab:accmods}}
 \end{table}
-
+```
+```{=tex}
 \begin{table}[tbp]
 \begin{center}
 \begin{threeparttable}
@@ -385,13 +416,10 @@ n. obs & \multicolumn{1}{c}{sigma} & \multicolumn{1}{c}{logLik} & \multicolumn{1
 \end{center}
 \caption{Model comparison metrics for different functional forms of the relationship between RT and age. \label{tab:rtmods}}
 \end{table}
-
-
-
+```
 ```{r accmods, results="asis", include = FALSE}
 papaja::apa_table(acc_mods_lmer_summary)
 ```
-
 
 ```{r results="asis", include = FALSE}
 papaja::apa_table(rt_mods_lmer_summary)
@@ -399,10 +427,9 @@ papaja::apa_table(rt_mods_lmer_summary)
 
 # Power Law Fits
 
-In the literature on the "law of practice", although the log-log relationship we observed is commonly present in the aggregate across individuals, the situation is substantially more complex when relationships are measured within individuals. The best fitting curves for individuals are often exponentials or delayed exponentials  (Evans et al., 2018; Heathcote, Brown, \& Mewhort, 2000). With our current dataset we cannot specifically determine whether within-individual patterns of change conform to linear, power law, or exponential developmental patterns unfortunately, because we have insufficient data about individuals' improvement across time. Thus, our current results apply to the form of the age gradient as opposed to the form of any individual's pattern of developmental change. 
+In the literature on the "law of practice", although the log-log relationship we observed is commonly present in the aggregate across individuals, the situation is substantially more complex when relationships are measured within individuals. The best fitting curves for individuals are often exponentials or delayed exponentials (Evans et al., 2018; Heathcote, Brown, & Mewhort, 2000). With our current dataset we cannot specifically determine whether within-individual patterns of change conform to linear, power law, or exponential developmental patterns unfortunately, because we have insufficient data about individuals' improvement across time. Thus, our current results apply to the form of the age gradient as opposed to the form of any individual's pattern of developmental change.
 
-Nevertheless, here we test for other forms of the aggregate relationship between age and reaction time. In particular, we consider further model comparison between the 
-
+Nevertheless, here we test for other forms of the aggregate relationship between age and reaction time. In particular, we consider further model comparison between the
 
 ```{r rt_mods}
 rt_more_mods_lmer <- 
@@ -433,8 +460,7 @@ Here we provide specifications for the mixed effects models used in the main tex
 
 FIXME
 
-
-# Factor Analysis 
+# Factor Analysis
 
 Figure 3 shows the result of a parallel analysis supporting the presence of three factors in the exploratory factor analysis. Table \ref{tab:loadings} shows the factor loadings for the exploratory three-factor solution using varimax rotation. The first factor is primarily driven by vocabulary measures, the second by reaction time, and the third by accuracy measures.
 
@@ -461,7 +487,10 @@ as.data.frame(unclass(loadings(fs))) |>
 ```
 
 <!-- % latex table generated in R 4.4.2 by xtable 1.8-4 package -->
+
 <!-- % Mon Apr 14 12:25:14 2025 -->
+
+```{=tex}
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrr}
@@ -479,7 +508,7 @@ age & 0.63 & -0.14 & 0.37 \\
 \end{tabular}
 \caption{\label{tab:loadings}Factor loadings for the exploratory three factor solution using varimax rotation.} 
 \end{table}
-
+```
 # Factor Analysis: First Administrations
 
 ```{r}
@@ -495,7 +524,6 @@ d_sub_mat_firstadmin_s <- d_sub_mat_firstadmin |>
                 ~ age_scale(.x, age))) 
 ```
 
-
 ```{r}
 fit3_firstadmin <- cfa(fa3_model, d_sub_mat_firstadmin_s, 
                        std.lv=TRUE, missing='fiml')
@@ -504,7 +532,6 @@ fit_stats_firstadmin <- suppressMessages(summary(fit3_firstadmin,
                                                  fit.measures=TRUE, 
                                                  standardize=TRUE))
 ```
-
 
 ```{r}
 d_sub_mat_firstadmin_s_renamed <- d_sub_mat_firstadmin_s |>
@@ -522,7 +549,6 @@ fit3_age_summary_firstadmin <-
                            standardize=TRUE))
 ```
 
-
 ```{r}
 library(semoutput)
 semoutput::sem_fitmeasures(fit3)
@@ -536,10 +562,10 @@ semoutput::sem_fitmeasures(fit3_age_firstadmin)
 
 In this section, we provide comparisons between the three-factor model we report in the main text and several alternative models, including:
 
-* a one-factor model;
-* a two-factor model with vocabulary separated from speed and accuracy;
-* a two-factor model with speed separated from accuracy and vocabulary; and 
-* a two-factor model with variability terms separated from speed, accuracy, and vocabulary.
+-   a one-factor model;
+-   a two-factor model with vocabulary separated from speed and accuracy;
+-   a two-factor model with speed separated from accuracy and vocabulary; and
+-   a two-factor model with variability terms separated from speed, accuracy, and vocabulary.
 
 \noindent Table \ref{tab:modcomp} shows the result of these comparisons. The three-factor model shows the lowest AIC and BIC, as well as being significantly better fittign than the next-best model.
 
@@ -571,8 +597,12 @@ fa3_fit <- cfa(fa3_model, d_sub_mat_s, std.lv=TRUE, missing='fiml')
 
 xtable(anova(fa1_fit, fa2_fit, fa2b_fit, fa2v_fit, fa3_fit), digits = 2)
 ```
+
 <!-- xtable 1.8-4 package -->
+
 <!-- % Fri Apr  4 15:15:52 2025 -->
+
+```{=tex}
 \begin{table}[ht]
 \centering
 \caption{Model comparison for alternative factor structures. $p$-values show differences between adjacent models; no $p$-values are shown for comparisons between non-nested models. \label{tab:modcomp}}
@@ -588,16 +618,20 @@ One-factor & 9 & 46535.49 & 46645.84 & 286.76 & 1.39 & 0.01 & 1 & 0.24 \\
 \hline
 \end{tabular}
 \end{table}
-
+```
 # Non-linear Growth Models
 
-To test for the differentiation of vocabulary growth based on initial reaction time, we used the package `nlme` to fit a logistic growth model to the production data. This model has two parameters for the logistic curve, a scale and an intercept. Both were allowed to interact with initial reaction time. We also included random effects of logistic intercept and scale by participant and a grouping term across datasets. This model showed a significant effect of initial reaction time on the intercept of the logistic growth curve, but not on its scale (see Table \ref{tab:nlme}). 
+To test for the differentiation of vocabulary growth based on initial reaction time, we used the package `nlme` to fit a logistic growth model to the production data. This model has two parameters for the logistic curve, a scale and an intercept. Both were allowed to interact with initial reaction time. We also included random effects of logistic intercept and scale by participant and a grouping term across datasets. This model showed a significant effect of initial reaction time on the intercept of the logistic growth curve, but not on its scale (see Table \ref{tab:nlme}).
+
 ```{r}
 # xtable(summary(mod_nlme)$tTable)
 ```
 
 <!-- % latex table generated in R 4.4.2 by xtable 1.8-4 package -->
+
 <!-- % Thu Mar 13 13:10:30 2025 -->
+
+```{=tex}
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrr}
@@ -612,7 +646,7 @@ Growth Scale $\times$ $t_0$ RT & 0.28 & 0.38 & 1766.00 & 0.75 & 0.46 \\
 \end{tabular}
 \caption{Fixed effects estimates from logistic growth model. \label{tab:nlme}}
 \end{table}
-
+```
 Interpretation of growth in both this model and the linear growth model in the main text is complicated by the fact that the CDI form puts a ceiling on the total number of words that can be recorded; both the quadratic growth functions and the logistic functions come together at the form ceiling. Thus, a shift in quadratic growth in the linear model and a shift in intercept in the logistic model both point to the same overall effect, which is faster growth at the point of maximal sensitivity of the CDI. Neither model can estimate whether the overall growth trajectory is different beyond the range of the CDI. Thus, although these models might initially seem to be in conflict, we believe that they actually point to the same phenomenon, which is perhaps better described by the longitudinal SEM model reported in the main text. Children with greater skill in word recognition show an overall positive shift in the growth trajectory of vocabulary development.
 
 FIXME
@@ -679,7 +713,6 @@ ggplot(d_sub_prod, aes(x = age, y = prod, col = as.factor(log_rt_0_resid))) +
   labs(y="Production", x="Age in months")
 
 ```
-
 
 ```{r}
 library(brms)
@@ -757,8 +790,6 @@ ggplot(new_data, aes(x = age_c, y = fit, col = as.factor(log_rt_0_c))) +
   scale_fill_solarized(guide = FALSE)
 
 ```
-
-
 
 ```{r}
 library(brms)
@@ -840,14 +871,14 @@ ggplot(new_data_resid, aes(x = age_c, y = fit, col = as.factor(resid_log_rt_0_c)
 
 # SEM Longitudinal Missingness
 
-FIXME 
+FIXME
 
 ```{r}
 colMeans(!is.na(d_sub_wide_fine))
 ```
 
-
-
 # Additional References
 
-Heathcote, A., Brown, S., \& Mewhort, D. J. K. (2000). The power law repealed: The case for an exponential law of practice. Psychonomic Bulletin & Review, 7(2), 185–207.
+Heathcote, A., Brown, S., & Mewhort, D. J. K. (2000). The power law repealed: The case for an exponential law of practice. Psychonomic Bulletin & Review, 7(2), 185–207.
+
+Creel, S. (2024). Connecting the tots: Strong looking-pointing correlations in preschoolers' word learning and implications for continuity in language development. Child Development, 96, 87-103.
